# nintendeals

./: .gitignore  .travis.yml  LICENSE  README.md  main.py  pyproject.toml  readme.md  readmee.md  requirements-test.txt  requirements.txt  setup.py  sonar-project.properties  tmp.py  tools.py
.github/workflows/: main.yml  master.yml  publish.yml
api/: __init__.py  config.py  games.py  jobs.py  prices.py  util.py
app/: app.py  bot.py
app/commons/: config.py  keys.py  util.py
app/db/: mongo.py
app/metacritic/: metacritic.py  scores.py
app/nintendo/: common.py  commons.py  eu.py  jp.py  na.py  prices.py
app/posts/: generator.py
app/reddit/: reddit.py
app/services/: config.py  games.py
app/wishlist/: wishlist.py
bot/: bot.py
bot/commons/: config.py  keys.py  util.py
bot/db/: mongo.py  util.py
bot/jobs/: games.py  inbox.py  main.py  prices.py  submissions.py  update.py  util.py  wishlist.py
bot/metacritic/: __init__.py  metacritic.py  scores.py
bot/nintendo/: commons.py  eu.py  jp.py  na.py  prices.py  util.py
bot/posts/: generator.py
code/: cache.py  main.py  requirements.txt
commons/: classes.py  config.py  emoji.py  keys.py  settings.py  util.py
db/: mongo.py  util.py
nintendeals/: constants.py  exceptions.py  helpers.py  util.py  validate.py
stats/: top_wishlist.py
templates/: index.html  wishlist.html
tests/: test_info.py  test_list_switch_games.py  test_listing.py  test_noa.py  test_noe.py  test_noj.py  test_prices.py  test_search_switch_games.py  test_validate.py
web/: faq.html  generator.py  main.html  wishlist.html
(+106 files in other folders)
