[tool.poetry]
name = "nintendeals"
description = "Scraping tools for Nintendo Switch games and prices on NA, EU and JP."
documentation = "https://github.com/fedecalendino/nintendeals/blob/main/README.md"
homepage = "https://github.com/fedecalendino/nintendeals"
license = "MIT"
readme = "README.md"
version = "3.0.0"

authors = [
  "Fede Calendino <fede@calendino.com>",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
keywords = [
  "nintendo",
  "deals",
]
packages = [
  { include = "nintendeals" },
]

[tool.poetry.dependencies]
python = "^3.8"
algoliasearch = "^2.6.2"
beautifulsoup4 = "^4.11.1"
pycountry = "^22.3.5"
python-dateutil = "^2.8.2"
requests = "^2.28.1"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
coverage = "^6.4.1"
ddt = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
